--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -77,8 +77,10 @@ mixin item()
 //- Date
 
 mixin date(input)
-    - var dates = convertDate(input)
-    time.date(datetime=dates.timestamp)&attributes(attributes)=dates.full
+    - var date = new Date(input)
+    - var months = [ 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December' ]
+
+    time(datetime=JSON.parse(JSON.stringify(date)))&attributes(attributes)=months[date.getMonth()] + ' ' + date.getDate() + ', ' + date.getFullYear()
 
 
 //- Blockquote
