--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -7,7 +7,7 @@ include _functions
 
 //- Headlines Helper Mixin
 
-mixin headline(level, style)
+mixin headline(level)
     if level == 1
         h1.u-heading-1
             block
