Update button component

--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -5,10 +5,14 @@
 //- Buttons
 
 .c-button
-    display: inline-block
     background: $color-front
     color: $color-back
     padding: 2rem 2.5rem
+    line-height: 1
+    transition: opacity 0.15s ease
+
+    &:hover
+        opacity: 0.95
 
 
 //- Code
