Add quote component

--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -166,3 +166,11 @@
 
     .c-teaser:hover &
         animation: noise2 0.5s ease 1
+
+
+//- Quotes
+
+.c-quote
+    padding-left: 2.5rem
+    margin-left: 0.5rem
+    border-left: 6px solid
