Add icon object

--- a/assets/css/_objects.sass
+++ b/assets/css/_objects.sass
@@ -104,3 +104,10 @@
 
     &:not(:last-child)
         margin-right: 2rem
+
+
+//- Icon
+
+.o-icon
+    display: inline-block
+    vertical-align: middle
