--- a/assets/css/_utilities.sass
+++ b/assets/css/_utilities.sass
@@ -7,9 +7,6 @@
 .u-text
     font: normal normal 2.2rem/#{1.375} $font-primary
 
-.u-text-large
-    font: normal normal 2.6rem/#{1.375} $font-primary
-
 .u-text-meta
     font: normal normal 1.6rem/#{1.375} $font-tertiary
 
@@ -24,6 +21,9 @@
     font: normal bold 1.4rem/#{1} $font-secondary
     letter-spacing: 1px
     text-transform: uppercase
+
+.u-text-strong
+    font-weight: bold
 
 .u-text-italic
     font-style: italic
