--- a/_layout.jade
+++ b/_layout.jade
@@ -58,7 +58,7 @@ html(lang="en")
                     +a("https://github.com/" + profiles.github + "/ines-io") Source
                     +a("/feed", true)(aria-label="RSS") #[+icon("feed", 14)]
 
-                !=partial("_includes/_social-icons")
+                include _includes/_social-icons
 
         //- Scripts
 
