--- a/index.jade
+++ b/index.jade
@@ -9,4 +9,4 @@ header.o-header.u-text-label(role="banner")
     include _includes/_logo
     +a("https://twitter.com/" + profiles.twitter) Twitter
 
-!=partial("_includes/_latest-posts")
+include _includes/_latest-posts
