Replace strong element with utility class

--- a/_includes/_article.jade
+++ b/_includes/_article.jade
@@ -18,7 +18,7 @@ article.o-article(class=(image && image.display == false) ? "o-article--full" : 
             if date
                 .o-inline-list.u-text-meta
                     if category
-                        strong.u-text-upper=category
+                        .u-text-upper.u-text-strong=category
 
                     +date(date)
 
