--- a/about.jade
+++ b/about.jade
@@ -2,13 +2,17 @@
 //- ⚡️ ABOUT ME
 //- ----------------------------------
 
-p Hi, I'm Ines. I'm a web developer and marketing strategist from Germany. I like ambitious projects and have spent the past year managing digital products and developing user interfaces and web-based tools for AI technology.
+include _includes/_mixins
+
+p Hi, I'm Ines and this is my personal blog. I'm a developer and marketing strategist specialising in web applications for Artificial Intelligence and Natural Language Processing technologies. I'm the co-founder of #[+a("https://explosion.ai", true) Explosion AI], a digital studio for custom AI and NLP solutions.
+
+p As a front-end developer, I work on the things you can see and interact with – basically, I'm the one turning a plain and naked API into a fully functioning and usable site or application. For AI, this means letting humans get knowledge to and from machine learning models.
 
 p I believe in programming until four in the morning in my pyjamas instead of getting up early to attend conferences about productivity. I believe in making the best possible products instead of launching just for the sake of it because some startup advice blog told me so. I believe in rational planning, logical consequences and bullshit-free hard work instead of  "following my dreams". In short, I believe in doing things.
 
-p I grew up on the internet and started coding and designing websites at eleven. I also have a degree in "something with media", more specifically Communication Science, Media Studies and Linguistics. For four years, I worked for #[em Exberliner], Berlin's English-language magazine, boosting ad sales, developing digital marketing campaigns and coordinating partnerships with agencies and brands. In early 2015, I became self-employed full time.
+p I grew up on the internet and started coding and designing websites at 11. After completing my degree in Communication Science, Media Studies and Linguistics, I spent four years at #[em Exberliner], Berlin's English-language magazine, boosting ad sales, developing digital marketing campaigns and coordinating partnerships with agencies and brands. I've been self-employed since early 2015.
 
-p I live in Berlin with my two fancy rats, Chomsky and Avocado.
+p I live in Berlin with my two fancy rats, #[+a("https://www.instagram.com/p/BKFoPy4gwoz/")(style="border: none") Chomsky and Avocado].
 
 p
     !=partial("_includes/_social-icons")
