Change primary font from EB Garamond to Alegreya

--- a/assets/css/_base/_fonts.sass
+++ b/assets/css/_base/_fonts.sass
@@ -11,20 +11,36 @@
     src: url("/assets/fonts/gt-walsheim-bold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/gt-walsheim-bold.woff") format("woff"), url("/assets/fonts/gt-walsheim-bold.ttf") format("truetype")
 
 @font-face
-    font-family: "EB Garamond"
+    font-family: "Alegreya"
     font-style: normal
     font-weight: normal
     font-display: swap
-    src: url("/assets/fonts/ebgaramond-regular.eot")
-    src: url("/assets/fonts/ebgaramond-regular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/ebgaramond-regular.woff2") format("woff2"), url("/assets/fonts/ebgaramond-regular.woff") format("woff"), url("/assets/fonts/ebgaramond-regular.ttf") format("truetype"), url("/assets/fonts/ebgaramond-regular.svg#ebgaramondregular") format("svg")
+    src: url("/assets/fonts/alegreya-regular.eot")
+    src: url("/assets/fonts/alegreya-regular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/alegreya-regular.woff2") format("woff2"), url("/assets/fonts/alegreya-regular.woff") format("woff"), url("/assets/fonts/alegreya-regular.ttf") format("truetype"), url("/assets/fonts/alegreya-regular.svg#alegreyaregular") format("svg")
 
 @font-face
-    font-family: "EB Garamond"
+    font-family: "Alegreya"
     font-style: italic
     font-weight: normal
     font-display: swap
-    src: url("/assets/fonts/ebgaramond-italic.eot")
-    src: url("/assets/fonts/ebgaramond-italic.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/ebgaramond-italic.woff2") format("woff2"), url("/assets/fonts/ebgaramond-italic.woff") format("woff"), url("/assets/fonts/ebgaramond-italic.ttf") format("truetype"), url("/assets/fonts/ebgaramond-italic.svg#ebgaramonditalic") format("svg")
+    src: url("/assets/fonts/alegreya-italic.eot")
+    src: url("/assets/fonts/alegreya-italic.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/alegreya-italic.woff2") format("woff2"), url("/assets/fonts/alegreya-italic.woff") format("woff"), url("/assets/fonts/alegreya-italic.ttf") format("truetype"), url("/assets/fonts/alegreya-italic.svg#alegreyaitalic") format("svg")
+
+@font-face
+    font-family: "Alegreya"
+    font-style: normal
+    font-weight: bold
+    font-display: swap
+    src: url("/assets/fonts/alegreya-bold.eot")
+    src: url("/assets/fonts/alegreya-bold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/alegreya-bold.woff2") format("woff2"), url("/assets/fonts/alegreya-bold.woff") format("woff"), url("/assets/fonts/alegreya-bold.ttf") format("truetype"), url("/assets/fonts/alegreya-bold.svg#alegreyabold") format("svg")
+
+@font-face
+    font-family: "Alegreya"
+    font-style: italic
+    font-weight: bold
+    font-display: swap
+    src: url("/assets/fonts/alegreya-bold-italic.eot")
+    src: url("/assets/fonts/alegreya-bold-italic.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/alegreya-bold-italic.woff2") format("woff2"), url("/assets/fonts/alegreya-bold-italic.woff") format("woff"), url("/assets/fonts/alegreya-bold-italic.ttf") format("truetype"), url("/assets/fonts/alegreya-bold-italic.svg#alegreyabold_italic") format("svg")
 
 @font-face
     font-family: "Proxima Nova"
