--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -10,7 +10,7 @@ $color-subtle: #fafafa !default
 $color-highlight: #fff6dd !default
 $syntax-highlighting: ( comment: #666, tag: #02bd80, number: #6b14c8, selector: #006cc0, operator: #fa354c, function: #f74288, keyword: #0abebb, regex: #febb51 )
 
-$font-primary: 'EB Garamond', 'Adobe Garamond Pro', Garamond, Georgia, 'Times New Roman', serif !default
+$font-primary: 'Alegreya', 'Adobe Garamond Pro', Garamond, Georgia, 'Times New Roman', serif !default
 $font-secondary: 'GT Walsheim', Helvetica, Arial, sans-serif !default
 $font-tertiary: 'Proxima Nova', Tahoma, Geneva, sans-serif !default
 $font-code: 'Source Code Pro', Consolas, 'Andale Mono', Menlo, Monaco, Courier, monospace !default
