Update link style

--- a/assets/css/_layout.sass
+++ b/assets/css/_layout.sass
@@ -29,7 +29,9 @@ p
 //- Links
 
 p a
-    border-bottom: 2px solid
+    background: $color-highlight
+    padding: 0 0.75rem
+    box-decoration-break: clone
 
 
 // Selected Text
