--- a/assets/css/_base/_reset.sass
+++ b/assets/css/_base/_reset.sass
@@ -8,12 +8,14 @@
     margin: 0
     outline: 0
     padding: 0
-    -webkit-font-smoothing: antialiased
 
 html
     font-family: sans-serif
+    text-rendering: optimizeSpeed
     -ms-text-size-adjust: 100%
     -webkit-text-size-adjust: 100%
+    -webkit-font-smoothing: antialiased
+    -moz-osx-font-smoothing: grayscale
 
 article, aside, details, figcaption, figure, footer, header, main, menu, nav,
 section, summary
