Use regular link style for rat picture on about page

--- a/about.jade
+++ b/about.jade
@@ -12,7 +12,7 @@ p I believe in programming until four in the morning in my pyjamas instead of ge
 
 p I grew up on the internet and started coding and designing websites at 11. After completing my degree in Communication Science, Media Studies and Linguistics, I spent four years at #[em Exberliner], Berlin's English-language magazine, boosting ad sales, developing digital marketing campaigns and coordinating partnerships with agencies and brands. I've been self-employed since early 2015.
 
-p I live in Berlin with my two fancy rats, #[+a("https://www.instagram.com/p/BKFoPy4gwoz/")(style="border: none") Chomsky and Avocado].
+p I live in Berlin with my two fancy rats, #[+a("https://www.instagram.com/p/BKFoPy4gwoz/") Chomsky and Avocado].
 
 p
     !=partial("_includes/_social-icons")
