--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -163,6 +163,7 @@
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAGCAYAAAAL+1RLAAAAF0lEQVQIW2NkwAIYgWKS6OIgQQxAoUoAE4AAUnD/0ugAAAAASUVORK5CYII=) repeat
     color: $color-back
     padding: 2.5rem 3.5rem
+    text-shadow: 2px 2px 0 rgba($color-front, 0.35)
 
     .c-teaser:hover &
         animation: noise2 0.5s ease 1
