--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -172,6 +172,7 @@
 //- Quotes
 
 .c-quote
+    $quote-border: 6px
     padding-left: 2.5rem
-    margin-left: 0.5rem
-    border-left: 6px solid
+    margin-left: -$quote-border * 2
+    border-left: $quote-border solid
