Add image credit mixin (alternative caption for sources)

--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -66,6 +66,11 @@ mixin image-caption()
         block
 
 
+mixin image-credit()
+    figcaption.u-text-meta-small.u-text-right
+        block
+
+
 //- List
 
 mixin list(style)
