Add table resets

--- a/assets/css/_base/_reset.sass
+++ b/assets/css/_base/_reset.sass
@@ -28,6 +28,13 @@ header, footer, figure
 ul, ol
     list-style: none
 
+table
+    text-align: left
+    width: 100%
+    max-width: 100%
+    border-collapse: collapse
+    vertical-align: top
+
 a
     background-color: transparent
     color: inherit
