Exclude buttons from paragraph link styles

--- a/assets/css/_layout.sass
+++ b/assets/css/_layout.sass
@@ -28,7 +28,7 @@ p
 
 //- Links
 
-p a
+p a:not(.c-button)
     background: $color-highlight
     padding: 0 0.75rem
     box-decoration-break: clone
