Add \ before :not for Sass compatibility

--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -27,7 +27,7 @@
         &:hover
             width: 125%
 
-:not(.c-code-block) > code
+\:not(.c-code-block) > code
     @extend .u-text-code
     background: $color-subtle
     display: inline-block
