Adjust blockquote spacing

--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -120,7 +120,7 @@ mixin date(input)
 
 mixin quote(source, link)
     blockquote.c-quote.o-block&attributes(attributes)
-        p.o-block.u-text-italic
+        p.o-block.o-block--small.u-text-italic
             block
 
         if source
