Add tweet mixin

--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -154,6 +154,14 @@ mixin youtube(id, ratio)
     +embed("https://www.youtube.com/embed/" + id, ratio)
 
 
+//- Tweet
+
+mixin tweet()
+    figure.o-block.c-tweet
+            block
+
+
+
 //- Code Block
 
 mixin code(language)
