--- a/blog/dynamic-duotone-svg-jade.jade
+++ b/blog/dynamic-duotone-svg-jade.jade
@@ -8,7 +8,7 @@ p In this blog post I'm going to explain the idea behind the duotone effect, how
 
 p If you've ever played around with the color channels in Photoshop or a similar editor, you've probably realised that it's not actually #[em that] easy to produce nice-looking results. My first experiments were all pretty frustrating because I was mostly just moving sliders around without understanding the actual logic behind it.
 
-p You're probably familiar with RGB model, in which red, green and blue are added in different proportions to produce more colors.
+p You're probably familiar with the RGB model, in which red, green and blue are added in different proportions to produce more colors.
 
 +image("duotone_rgb.jpg", false, "Illustration of RGB color model")
 
